[package]
name = "bropilot"
version = "0.1.5"
edition = "2021"
authors = ["Rahul Sengottuvelu <rgsduke@gmail.com>"]
description = "A fun and efficient Rust library to count tokens in text files using different tokenizers."
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.10.3"
crossterm = "0.26.1"
dotenv_codegen = "0.15.0"
urlencoding = "2.1.2"
